--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://github.com/wangleiming/wangzuqin.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/wangleiming/wangzuqin.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wangleiming/wangzuqin.github.io/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://baidu.com" class="btn">百度</a>
     </section>
 
     <section class="main-content">
