Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <section class="page-header">
       <h1 class="project-name">倾城之叹的博客</h1>
       <h2 class="project-tagline">The world changed because of the code</h2>
-      <a href="https://baidu.com" class="btn">百度</a>
+      <a href="https://github.com/wangleiming/wangzuqin.github.io" class="btn">View on GitHub</a>
+      <a href="https://github.com/wangleiming/wangzuqin.github.io/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/wangleiming/wangzuqin.github.io/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="wangzuqingithubio" class="anchor" href="#wangzuqingithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wangzuqin.github.io</h1>
-
-<p>this is really stupid</p>
+      <p>lllllllllllllllll</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/wangleiming/wangzuqin.github.io">倾城之叹的博客</a> is maintained by <a href="https://github.com/wangleiming">wangleiming</a>.</span>
